assed color and checked everything

--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 </head>
 <body>
   <div class="header"> <!-- Start Header -->
+		<h1 class="hidden">Muskoka Brewery Document Outline</h1>
     <div class="logo"><!--Start logo-->
       <h2 class="hidden">Logo</h2>
       <img src="images/nav_logo.png" alt="Muskoka Logo"><!-- LOGO -->
     </div><!--End logo-->
     <div class="title"> <!--Start Title-->
-      <h1>Muskoka Brewery</h1>
-      <h2>Handcrafted, Small Batch Brewed</h2>
+      <h2>Muskoka Brewery</h2>
+      <h3>Handcrafted, Small Batch Brewed</h3>
     </div> <!--End Title-->
   </div> <!-- End Header -->
   <div class="mainContainer"> <!-- Start main container -->
