Added the other two images in

--- a/index.html
+++ b/index.html
@@ -58,10 +58,12 @@
       </div>
       </div>
     </div><!-- End Our Values -->
+		<div class="beerImage">
+			<img src="images/creamAle.png" alt="Cream Ale"> <!-- Beer Image -->
+			<img src="images/craftLager.png" alt="Craft Lager"> <!-- Beer Image -->
+			<img src="images/DetourISA.png" alt="Detour"> <!-- Beer Image -->
+		</div>
     <div class="beersContainer"><!-- Start Our Beers -->
-      <div class="beerImage">
-        <img src="images/creamAle.png" alt="Cream Ale"> <!-- Beer Image -->
-      </div>
         <h2>Our Beers</h2>
           <ul>
             <li>Cream Ale</li>
